More edits for post

--- a/apix/Makefile
+++ b/apix/Makefile
@@ -5,4 +5,5 @@ build: clean
 	@lein compile
 	@lein uberjar
 	@docker build -t jamtur01/tornado-apix-jaeger .
+	@docker push jamtur01/tornado-apix-jaeger
 
