--- a/apiy/Makefile
+++ b/apiy/Makefile
@@ -5,4 +5,5 @@ build: clean
 	@lein compile
 	@lein uberjar
 	@docker build -t jamtur01/tornado-apiy-jaeger .
+	@docker push jamtur01/tornado-apiy-jaeger
 
