--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,24 @@ services:
     environment:
       - DB_HOSTNAME=db
     depends_on:
+      - tornado-redis
       - tornado-db
 
   jaeger:
-    image: jaegertracing/all-in-one
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
     ports:
       - "3007:16686"
+      - "9411:9411"
+      - "9410:9410"
+      - "5775:5775"
+      - "6831:6831"
+      - "6832:6832"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
     depends_on:
       - tornado-apix
-      - tornado-apiy 
+      - tornado-apiy
